--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,9 +27,7 @@ jobs:
       # 安装依赖 & 运行测试并生成覆盖率报告 & 项目打包
       - name: Install and Build
         run: |
-          npm install --legacy-peer-deps # 安装依赖
-          npm audit fix
-          npm audit fix --force
+          npm install --force # 安装依赖
           # 运行 测试
           # 其实，运行的是 "（项目里面的）根目录/package.json 文件" ，里面有个 scripts对象，对象里含有 "coverage": "vue-cli-service test:unit --coverage" 命令行）
           npm run coverage
