--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,10 +24,17 @@ jobs:
       - name: Checkout
         uses: actions/checkout@master
 
+      # 设置 "node版本" 和 "npm版本"
+      - name: Use Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '20.x'
+          npm-version: '10.x'
+
       # 安装依赖 & 运行测试并生成覆盖率报告 & 项目打包
       - name: Install and Build
         run: |
-          npm install --force # 安装依赖
+          npm install # 安装依赖
           # 运行 测试
           # 其实，运行的是 "（项目里面的）根目录/package.json 文件" ，里面有个 scripts对象，对象里含有 "coverage": "vue-cli-service test:unit --coverage" 命令行）
           npm run coverage
