--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,16 +31,20 @@ jobs:
           node-version: '16.x'
           registry-url: 'https://registry.npmjs.org'
 
+      # 全局安装 yarn
+      - name: Install yarn
+        run: npm install -g yarn
+
       # 安装依赖 & 运行测试并生成覆盖率报告 & 项目打包
       - name: Install and Build
         run: |
-          npm install # 安装依赖
+          yarn install # 安装依赖
           # 运行 测试
           # 其实，运行的是 "（项目里面的）根目录/package.json 文件" ，里面有个 scripts对象，对象里含有 "coverage": "vue-cli-service test:unit --coverage" 命令行）
-          npm run coverage
+          yarn run coverage
           # 构建项目 
-          # 如果 "前面的测试（命令）" 不通过，就不会执行 npm run build，而且会给你发一封邮件，告诉你，自动运行的失败了、哪处失败 等等
-          npm run build
+          # 如果 "前面的测试（命令）" 不通过，就不会执行 yarn run build，而且会给你发一封邮件，告诉你，自动运行的失败了、哪处失败 等等
+          yarn run build
 
       # 构建成功后，通常情况下，我们就要把 "构建出来的包" 部署到网站上（发布到网站上）
       # 发布到 GitHub Pages（此处，我们这边把 "构建包" 发布到 "GitHub Pages（页面托管系统）"当中）
@@ -52,7 +56,7 @@ jobs:
         with:
           # 把 "gh-pages 分支" 部署到 "GitHub Pages（页面托管系统）" 网站中
           branch: gh-pages # The branch the action should deploy to.
-          # 我们在前面运行了 npm run build，会生成一个 "dist 文件夹" 的构建包
+          # 我们在前面运行了 yarn run build，会生成一个 "dist 文件夹" 的构建包
           # 这句话的意思是：把 "dist 目录" 推送到 "当前项目的 gh-pages分支" 上
           folder: dist # The folder the action should deploy.
 
